2008-09-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/validate-registry.py:
	  Add another check, instantiating the socket mentioned by a plug.
	* flumotion/component/misc/httpserver/cachedprovider.py:
	* flumotion/component/misc/httpserver/fileprovider.py:
	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/component/misc/httpserver/localprovider.py:
	* flumotion/component/plugs/plugs.xml:
	  Further Plug naming fixes.

2008-09-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/greeter.py:
	  Since the authentication method was removed, change the string.

2008-09-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	* flumotion/component/misc/httpserver/httpserver.py:
	* flumotion/manager/manager.py:
	  Fix more socket = '...' instances.
	* flumotion/test/test_component_httpstreamer.py:
	  Add a test for getStreamData.

2008-09-04  Pedro Gracia  <pedro@flumotion.com>

	* po/POTFILES.in:
	Deleted "flumotion/component/plugs/lifecycle.py" entry.
	Removed in r7354.

2008-09-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/plugs/manhole.py:
	  lifecycle module is gone.
	* flumotion/extern/fdpass/__init__.py:
	  Insert some magic that makes flumotion.extern.fdpass.fdpass
	  importable in distcheck mode.

2008-09-03  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/misc/httpserver/admin_gtk.py:
	* flumotion/component/misc/httpserver/httpserver.glade:
	* flumotion/component/misc/httpserver/serverstats.py:
	Updated the http-server UI to better match the http-server UI.
	Removed some obscure statistics from the UI.
	Disabled the cache UI.

2008-09-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/validate-registry.py:
	  Make sure that all plugs can be instantiated.
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml: